// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/progress/demo/circle.md extend context correctly 1`] = `
Array [
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle"
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="1"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:221.48228207808043px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="0"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke:#52C41A;stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
      </svg>
      <span
        class="ant-progress-text"
        title="75%"
      >
        75%
      </span>
    </div>
  </div>,
  <div
    class="ant-progress ant-progress-circle ant-progress-status-exception ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle"
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="1"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:206.7167966062084px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="0"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke:#52C41A;stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        <span
          aria-label="close"
          class="anticon anticon-close"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M13.65 2.15a.5.5 0 11.7.7L9.21 8l5.46 5.46a.5.5 0 11-.71.7L8.5 8.72l-5.46 5.46a.5.5 0 01-.7-.71L7.78 8 2.65 2.85a.5.5 0 11.7-.7L8.5 7.29l5.15-5.14z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>,
  <div
    class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle"
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="1"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="0"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke:#52C41A;stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        <span
          aria-label="selector"
          class="anticon anticon-selector"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="selector"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M14 4.47c.29.3.29.77 0 1.06l-6.75 6.74c-.3.3-.77.3-1.06 0L1.94 8.02A.75.75 0 013 6.96l3.72 3.72 6.22-6.21c.29-.3.76-.3 1.06 0z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>,
]
`;

exports[`renders ./components/progress/demo/circle-dynamic.md extend context correctly 1`] = `
Array [
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle"
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="0"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="0"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke:#52C41A;stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
      </svg>
      <span
        class="ant-progress-text"
        title="0%"
      >
        0%
      </span>
    </div>
  </div>,
  <div
    class="ant-btn-group"
  >
    <button
      class="ant-btn ant-btn-icon-only"
      type="button"
    >
      <span
        aria-label="minus"
        class="anticon anticon-minus"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="minus"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M872 474H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h720c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
    </button>
    <button
      class="ant-btn ant-btn-icon-only"
      type="button"
    >
      <span
        aria-label="plus"
        class="anticon anticon-plus"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="plus"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <defs />
          <path
            d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
          />
          <path
            d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
          />
        </svg>
      </span>
    </button>
  </div>,
]
`;

exports[`renders ./components/progress/demo/circle-mini.md extend context correctly 1`] = `
Array [
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:80px;height:80px;font-size:18px"
    >
      <svg
        class="ant-progress-circle"
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="1"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:88.59291283123217px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="0"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke:#52C41A;stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
      </svg>
      <span
        class="ant-progress-text"
        title="30%"
      >
        30%
      </span>
    </div>
  </div>,
  <div
    class="ant-progress ant-progress-circle ant-progress-status-exception ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:80px;height:80px;font-size:18px"
    >
      <svg
        class="ant-progress-circle"
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="1"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:206.7167966062084px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="0"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke:#52C41A;stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        <span
          aria-label="close"
          class="anticon anticon-close"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M13.65 2.15a.5.5 0 11.7.7L9.21 8l5.46 5.46a.5.5 0 11-.71.7L8.5 8.72l-5.46 5.46a.5.5 0 01-.7-.71L7.78 8 2.65 2.85a.5.5 0 11.7-.7L8.5 7.29l5.15-5.14z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>,
  <div
    class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:80px;height:80px;font-size:18px"
    >
      <svg
        class="ant-progress-circle"
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="1"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="0"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke:#52C41A;stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        <span
          aria-label="selector"
          class="anticon anticon-selector"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="selector"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M14 4.47c.29.3.29.77 0 1.06l-6.75 6.74c-.3.3-.77.3-1.06 0L1.94 8.02A.75.75 0 013 6.96l3.72 3.72 6.22-6.21c.29-.3.76-.3 1.06 0z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>,
]
`;

exports[`renders ./components/progress/demo/dashboard.md extend context correctly 1`] = `
Array [
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle"
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:220.30970943744057px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
          fill-opacity="0"
          opacity="1"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:165.23228207808043px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
          fill-opacity="0"
          opacity="0"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke:#52C41A;stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
      </svg>
      <span
        class="ant-progress-text"
        title="75%"
      >
        75%
      </span>
    </div>
  </div>,
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle"
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:265.3097094374406px 295.3097094374406px;stroke-dashoffset:-15px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
          fill-opacity="0"
          opacity="1"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:198.98228207808043px 295.3097094374406px;stroke-dashoffset:-15px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
          fill-opacity="0"
          opacity="0"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke:#52C41A;stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-15px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
      </svg>
      <span
        class="ant-progress-text"
        title="75%"
      >
        75%
      </span>
    </div>
  </div>,
]
`;

exports[`renders ./components/progress/demo/dynamic.md extend context correctly 1`] = `
Array [
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width:0%;height:8px;border-radius:"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
      title="0%"
    >
      0%
    </span>
  </div>,
  <div
    class="ant-btn-group"
  >
    <button
      class="ant-btn ant-btn-icon-only"
      type="button"
    >
      <span
        aria-label="minus"
        class="anticon anticon-minus"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="minus"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M872 474H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h720c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
    </button>
    <button
      class="ant-btn ant-btn-icon-only"
      type="button"
    >
      <span
        aria-label="plus"
        class="anticon anticon-plus"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="plus"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <defs />
          <path
            d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
          />
          <path
            d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
          />
        </svg>
      </span>
    </button>
  </div>,
]
`;

exports[`renders ./components/progress/demo/format.md extend context correctly 1`] = `
Array [
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle"
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="1"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:221.48228207808043px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="0"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke:#52C41A;stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
      </svg>
      <span
        class="ant-progress-text"
        title="75 Days"
      >
        75 Days
      </span>
    </div>
  </div>,
  <div
    class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle"
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="1"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="0"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke:#52C41A;stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
      </svg>
      <span
        class="ant-progress-text"
        title="Done"
      >
        Done
      </span>
    </div>
  </div>,
]
`;

exports[`renders ./components/progress/demo/gradient-line.md extend context correctly 1`] = `
Array [
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width:99.9%;height:8px;border-radius:;background-image:linear-gradient(to right, #108ee9 0%, #87d068 100%)"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
      title="99.9%"
    >
      99.9%
    </span>
  </div>,
  <div
    class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width:99.9%;height:8px;border-radius:;background-image:linear-gradient(to right, #108ee9, #87d068)"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
      title="99.9%"
    >
      99.9%
    </span>
  </div>,
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner ant-progress-circle-gradient"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle"
        viewBox="0 0 100 100"
      >
        <defs>
          <linearGradient
            id="undefined-gradient"
            x1="100%"
            x2="0%"
            y1="0%"
            y2="0%"
          >
            <stop
              offset="0%"
              stop-color="#108ee9"
            />
            <stop
              offset="100%"
              stop-color="#87d068"
            />
          </linearGradient>
        </defs>
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="1"
          stroke="url(#undefined-gradient)"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:265.77873849369655px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="0"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke:#52C41A;stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
      </svg>
      <span
        class="ant-progress-text"
        title="90%"
      >
        90%
      </span>
    </div>
  </div>,
  <div
    class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner ant-progress-circle-gradient"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle"
        viewBox="0 0 100 100"
      >
        <defs>
          <linearGradient
            id="undefined-gradient"
            x1="100%"
            x2="0%"
            y1="0%"
            y2="0%"
          >
            <stop
              offset="0%"
              stop-color="#108ee9"
            />
            <stop
              offset="100%"
              stop-color="#87d068"
            />
          </linearGradient>
        </defs>
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="1"
          stroke="url(#undefined-gradient)"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="0"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke:#52C41A;stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        <span
          aria-label="selector"
          class="anticon anticon-selector"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="selector"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M14 4.47c.29.3.29.77 0 1.06l-6.75 6.74c-.3.3-.77.3-1.06 0L1.94 8.02A.75.75 0 013 6.96l3.72 3.72 6.22-6.21c.29-.3.76-.3 1.06 0z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>,
]
`;

exports[`renders ./components/progress/demo/line.md extend context correctly 1`] = `
Array [
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width:30%;height:8px;border-radius:"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
      title="30%"
    >
      30%
    </span>
  </div>,
  <div
    class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width:50%;height:8px;border-radius:"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
      title="50%"
    >
      50%
    </span>
  </div>,
  <div
    class="ant-progress ant-progress-line ant-progress-status-exception ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width:70%;height:8px;border-radius:"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
    >
      <span
        aria-label="close-fullfiled"
        class="anticon anticon-close-fullfiled"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-fullfiled"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 6.3L5.88 5.16a.5.5 0 00-.77.64l.06.07L7.3 8l-2.12 2.12a.5.5 0 00.64.77l.07-.06L8 8.7l2.12 2.12a.5.5 0 00.77-.64l-.06-.07L8.7 8l2.12-2.12a.5.5 0 00-.64-.77l-.07.06L8 7.3 5.88 5.17 8 7.3z"
          />
        </svg>
      </span>
    </span>
  </div>,
  <div
    class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width:100%;height:8px;border-radius:"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
    >
      <span
        aria-label="success-filled"
        class="anticon anticon-success-filled"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="success-filled"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 1a7 7 0 110 14A7 7 0 018 1zm3.15 4.93L7.1 9.98 4.85 7.73a.5.5 0 10-.7.71l2.6 2.6c.19.2.5.2.7 0l4.4-4.4a.5.5 0 00-.7-.71z"
          />
        </svg>
      </span>
    </span>
  </div>,
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width:50%;height:8px;border-radius:"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/progress/demo/line-mini.md extend context correctly 1`] = `
<div
  style="width:170px"
>
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-small"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width:30%;height:6px;border-radius:"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
      title="30%"
    >
      30%
    </span>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info ant-progress-small"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width:50%;height:6px;border-radius:"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
      title="50%"
    >
      50%
    </span>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-exception ant-progress-show-info ant-progress-small"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width:70%;height:6px;border-radius:"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
    >
      <span
        aria-label="close-fullfiled"
        class="anticon anticon-close-fullfiled"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-fullfiled"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 6.3L5.88 5.16a.5.5 0 00-.77.64l.06.07L7.3 8l-2.12 2.12a.5.5 0 00.64.77l.07-.06L8 8.7l2.12 2.12a.5.5 0 00.77-.64l-.06-.07L8.7 8l2.12-2.12a.5.5 0 00-.64-.77l-.07.06L8 7.3 5.88 5.17 8 7.3z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-small"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width:100%;height:6px;border-radius:"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
    >
      <span
        aria-label="success-filled"
        class="anticon anticon-success-filled"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="success-filled"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 1a7 7 0 110 14A7 7 0 018 1zm3.15 4.93L7.1 9.98 4.85 7.73a.5.5 0 10-.7.71l2.6 2.6c.19.2.5.2.7 0l4.4-4.4a.5.5 0 00-.7-.71z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/linecap.md extend context correctly 1`] = `
Array [
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width:75%;height:8px;border-radius:0"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
      title="75%"
    >
      75%
    </span>
  </div>,
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle"
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="square"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="1"
          stroke=""
          stroke-linecap="square"
          stroke-width="6"
          style="stroke-dasharray:221.48228207808043px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="0"
          stroke=""
          stroke-linecap="square"
          stroke-width="6"
          style="stroke:#52C41A;stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
      </svg>
      <span
        class="ant-progress-text"
        title="75%"
      >
        75%
      </span>
    </div>
  </div>,
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle"
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
          fill-opacity="0"
          stroke-linecap="square"
          stroke-width="6"
          style="stroke-dasharray:220.30970943744057px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
          fill-opacity="0"
          opacity="1"
          stroke=""
          stroke-linecap="square"
          stroke-width="6"
          style="stroke-dasharray:165.23228207808043px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
          fill-opacity="0"
          opacity="0"
          stroke=""
          stroke-linecap="square"
          stroke-width="6"
          style="stroke:#52C41A;stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
      </svg>
      <span
        class="ant-progress-text"
        title="75%"
      >
        75%
      </span>
    </div>
  </div>,
]
`;

exports[`renders ./components/progress/demo/segment.md extend context correctly 1`] = `
Array [
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width:60%;height:8px;border-radius:"
        />
        <div
          class="ant-progress-success-bg"
          style="width:30%;height:8px;border-radius:"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
      title="60%"
    >
      60%
    </span>
  </div>,
  <div>
    <div
      class="ant-tooltip"
      style="opacity:0;pointer-events:none"
    >
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-arrow"
        >
          <span
            class="ant-tooltip-arrow-content"
          />
        </div>
        <div
          class="ant-tooltip-inner"
          role="tooltip"
        >
          3 done / 3 in progress / 4 to do
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle"
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="1"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:88.59291283123217px 295.3097094374406px;stroke-dashoffset:-88.59291283123217px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          opacity="1"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke:#52C41A;stroke-dasharray:88.59291283123217px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
      </svg>
      <span
        class="ant-progress-text"
        title="60%"
      >
        60%
      </span>
    </div>
  </div>,
  <div>
    <div
      class="ant-tooltip"
      style="opacity:0;pointer-events:none"
    >
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-arrow"
        >
          <span
            class="ant-tooltip-arrow-content"
          />
        </div>
        <div
          class="ant-tooltip-inner"
          role="tooltip"
        >
          3 done / 3 in progress / 4 to do
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle"
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
          fill-opacity="0"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:220.30970943744057px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
          fill-opacity="0"
          opacity="1"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:66.09291283123217px 295.3097094374406px;stroke-dashoffset:-103.59291283123217px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
          fill-opacity="0"
          opacity="1"
          stroke=""
          stroke-linecap="round"
          stroke-width="6"
          style="stroke:#52C41A;stroke-dasharray:66.09291283123217px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s"
        />
      </svg>
      <span
        class="ant-progress-text"
        title="60%"
      >
        60%
      </span>
    </div>
  </div>,
  <div>
    <div
      class="ant-tooltip"
      style="opacity:0;pointer-events:none"
    >
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-arrow"
        >
          <span
            class="ant-tooltip-arrow-content"
          />
        </div>
        <div
          class="ant-tooltip-inner"
          role="tooltip"
        >
          3 done / 3 in progress / 4 to do
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/progress/demo/steps.md extend context correctly 1`] = `
Array [
  <div
    class="ant-progress ant-progress-steps ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-steps-outer"
    >
      <div
        class="ant-progress-steps-item ant-progress-steps-item-active"
        style="width:14px;height:8px"
      />
      <div
        class="ant-progress-steps-item ant-progress-steps-item-active"
        style="width:14px;height:8px"
      />
      <div
        class="ant-progress-steps-item"
        style="width:14px;height:8px"
      />
      <span
        class="ant-progress-text"
        title="50%"
      >
        50%
      </span>
    </div>
  </div>,
  <br />,
  <div
    class="ant-progress ant-progress-steps ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-steps-outer"
    >
      <div
        class="ant-progress-steps-item ant-progress-steps-item-active"
        style="width:14px;height:8px"
      />
      <div
        class="ant-progress-steps-item ant-progress-steps-item-active"
        style="width:14px;height:8px"
      />
      <div
        class="ant-progress-steps-item"
        style="width:14px;height:8px"
      />
      <div
        class="ant-progress-steps-item"
        style="width:14px;height:8px"
      />
      <div
        class="ant-progress-steps-item"
        style="width:14px;height:8px"
      />
      <span
        class="ant-progress-text"
        title="30%"
      >
        30%
      </span>
    </div>
  </div>,
  <br />,
  <div
    class="ant-progress ant-progress-steps ant-progress-status-success ant-progress-show-info ant-progress-small"
  >
    <div
      class="ant-progress-steps-outer"
    >
      <div
        class="ant-progress-steps-item ant-progress-steps-item-active"
        style="background-color:#52c41a;width:2px;height:8px"
      />
      <div
        class="ant-progress-steps-item ant-progress-steps-item-active"
        style="background-color:#52c41a;width:2px;height:8px"
      />
      <div
        class="ant-progress-steps-item ant-progress-steps-item-active"
        style="background-color:#52c41a;width:2px;height:8px"
      />
      <div
        class="ant-progress-steps-item ant-progress-steps-item-active"
        style="background-color:#52c41a;width:2px;height:8px"
      />
      <div
        class="ant-progress-steps-item ant-progress-steps-item-active"
        style="background-color:#52c41a;width:2px;height:8px"
      />
      <span
        class="ant-progress-text"
      >
        <span
          aria-label="success-filled"
          class="anticon anticon-success-filled"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="success-filled"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 1a7 7 0 110 14A7 7 0 018 1zm3.15 4.93L7.1 9.98 4.85 7.73a.5.5 0 10-.7.71l2.6 2.6c.19.2.5.2.7 0l4.4-4.4a.5.5 0 00-.7-.71z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>,
]
`;
